Issue #22 removed whitespace in application.css
EventList.Sidebar is making a comeback!

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,13 +21,13 @@ body, h1, h2, h6, .h1, .h2, .h4, .h6, p, a, span, label, button {
 
 h3, .h3, , h4, .h4, h5, .h5, .upvote-counter, .event-title, .event-upvotes {
   font-family:'Roboto Slab', Helvetica, sans-serif !important;
-} 
+}
 
 /* navbar */
 body .navbar {
   background-color: #fff;
   border: 1px solid #F0F0F0;
-  
+
   a.navbar-brand {
     display: block;
     overflow: hidden;
@@ -40,14 +40,14 @@ body .navbar {
     cursor: pointer;
     padding:5px 10px;
   }
-  .navbar-right li { 
+  .navbar-right li {
     padding: 10px;
-    .btn-focus { 
+    .btn-focus {
       background: darken($active,10%);
       color: $activeText;
       border: 1px solid darken($active,10%);
     }
-    .btn-alt { 
+    .btn-alt {
       background: #EEE;
       border: 1px solid #EEE;
     }
@@ -70,7 +70,7 @@ body .navbar {
     background-color: #efefef;
     border: solid #cecece 1px;
     padding: 5px;
-    
+
     select {
       width: 100%;
       margin-top: 10px;
@@ -83,13 +83,13 @@ body .navbar {
   }
 }
 
-.profile{ 
+.profile{
   border:none;
   background:none;
   margin-right:130px;
   margin-top:10px;
   }
-  
+
 .dropdown-menu {
   border:none;
   box-shadow: none;
@@ -113,7 +113,7 @@ body .navbar {
     margin-bottom:0px;
     font-size:20px;
   }
-  
+
   .button-container {
     text-align: center;
   }
@@ -125,9 +125,9 @@ body .navbar {
     margin: 0px auto;
     background-color:#f0f0f0;
   }
-  
+
   .btn:hover {
-    background-color: lighten($active, 10%); 
+    background-color: lighten($active, 10%);
   }
 }
 
@@ -210,7 +210,7 @@ body .navbar {
 
 /*sidebar*/
 
-.top-ranked {
+.sidebar {
   margin-top:20px;
   padding: 5px 15px;
   h5 {
@@ -246,7 +246,7 @@ body .navbar {
   text-align: right;
 
   .form-row {
-    margin-bottom: 10px;  
+    margin-bottom: 10px;
   }
 
   .form-guide {
@@ -277,16 +277,16 @@ body .navbar {
       width: 100%;
       height: 280px;
     }
-    
+
     .image-container {
       position: relative;
       overflow: hidden;
       cursor: move;
-      
-      img { 
+
+      img {
         position: absolute;
       }
-      
+
       .image-trim {
         position: absolute;
         height: 100%;
@@ -318,7 +318,7 @@ body .navbar {
         height: 10px;
 
         .slider {
-          position: absolute; 
+          position: absolute;
           height: 20px;
           width: 20px;
           border-radius: 10px;
@@ -344,7 +344,7 @@ body .navbar {
 }
 
 .event-card {
-  
+
   .event-image-container {
     height: 300px;
     max-width: 430px;
@@ -372,9 +372,9 @@ body .navbar {
   .event-time-location {
     font-size: 17px;
     color:#888;
-    
+
   }
-  
+
   .event-description-container {
     margin-top:15px;
     .event-description {
@@ -420,7 +420,7 @@ body .navbar {
   }
 
   .event-reminders-container {
-    width: 240px; 
+    width: 240px;
   }
 
   .popover {
